# PoseCNN

./: .gitignore  LICENSE  README.md  log.txt
data/LINEMOD/: extents.txt  models.txt  poses.txt
data/LOV/: camera.json  debug.txt  draw_confusion_table.m  draw_ctable.m  extents.txt  keyframe.txt  models.txt  models_debug.txt  poses.txt  train.txt  train_few.txt  trainval.txt  val.txt  val_few.txt
data/RGBDScene/: camera.json  train.txt  val.txt
data/ShapeNetScene/: camera.json  train.txt  val.txt
data/YCB/: extents.txt  trainval.txt
data/demo_models/: .gitignore  vgg16_fcn_color_single_frame_2d_pose_add_lov_iter_80000.ckpt.index
experiments/cfgs/: gmu_scene.yml  linemod_ape.yml  linemod_ape_3d.yml  linemod_ape_det.yml  linemod_ape_pose.yml  linemod_benchvise.yml  linemod_benchvise_det.yml  linemod_benchvise_pose.yml  linemod_camera.yml  linemod_camera_det.yml  linemod_camera_pose.yml  linemod_can.yml  linemod_can_3d.yml  linemod_can_det.yml  linemod_can_pose.yml  linemod_cat.yml  linemod_cat_3d.yml  linemod_cat_det.yml  linemod_cat_pose.yml  linemod_color_2d.yml  linemod_driller.yml  linemod_driller_3d.yml  linemod_driller_det.yml  linemod_driller_pose.yml  linemod_duck.yml  linemod_duck_3d.yml  linemod_duck_det.yml  linemod_duck_pose.yml  linemod_eggbox.yml  linemod_eggbox_3d.yml  linemod_eggbox_det.yml  linemod_eggbox_pose.yml  linemod_glue.yml  linemod_glue_3d.yml  linemod_glue_det.yml  linemod_glue_pose.yml  linemod_holepuncher.yml  linemod_holepuncher_3d.yml  linemod_holepuncher_det.yml  linemod_holepuncher_pose.yml  (+66 more)
experiments/scripts/: demo.sh  gmu_scene_vgg16.sh  gmu_scene_vgg16_test.sh  linemod_ape.sh  linemod_ape_det_test.sh  linemod_ape_det_train.sh  linemod_ape_pose.sh  linemod_ape_test.sh  linemod_ape_test_3d.sh  linemod_ape_train.sh  linemod_ape_train_3d.sh  linemod_benchvise_det_test.sh  linemod_benchvise_det_train.sh  linemod_benchvise_test.sh  linemod_benchvise_train.sh  linemod_camera_det_test.sh  (+164 more)
lib/: Makefile  make.sh  make_one.sh  make_single.sh  setup.py  setup.py~  setup_bak.py
lib/kinect_fusion/: CMakeLists.txt  kfusion.cpp  kfusion.hpp  kfusion.pyx  kinect_fusion.cpp  kinect_fusion.hpp  run.sh
lib/kinect_fusion/include/df/camera/: camera.h  cameraFactory.h  cameraModel.h  linear.h  poly3.h  rig.h
lib/kinect_fusion/include/df/depth/: backprojection.h
lib/kinect_fusion/include/df/fusion/: fusion.h
lib/kinect_fusion/include/df/icpcuda/: ICPOdometry.h  internal.h  safe_call.hpp
lib/kinect_fusion/include/df/image/: bilateralFilter.h  imagePyramid.h
lib/kinect_fusion/include/df/optimization/: deformationGraphRegularization.h  icp.h  linearSystems.h  nonrigidIcp.h
lib/kinect_fusion/include/df/prediction/: glRender.h  glRenderTypes.h  raycast.h
lib/kinect_fusion/include/df/surface/: color.h  decimation.h  marchingCubes.h  marchingCubesTables.h  normals.h
lib/kinect_fusion/include/df/transform/: nonrigid.h  nonrigidDeviceModule.h  rigid.h
lib/kinect_fusion/include/df/util/: args.h  cudaHelpers.h  debugHelpers.h  dualQuaternion.h  eigenHelpers.h  fileHelpers.h  fpsCounter.h  glHelpers.h  globalTimer.h  macros.h  nanoflannHelpers.h  pangolinHelpers.h  sophusHelpers.h  tensor.h  tupleHelpers.h  typeList.h
lib/kinect_fusion/include/df/voxel/: color.h  compositeVoxel.h  movingAverage.h  probability.h  tsdf.h  voxelGrid.h
lib/kinect_fusion/shaders/: canonicalVerts.frag  canonicalVerts.vert  canonicalVertsAndColor.frag  canonicalVertsAndColor.vert  canonicalVertsAndNorms.frag  canonicalVertsAndNorms.vert  canonicalVertsAndTexture.frag  foreground.frag  foreground.vert  vertsAndNorms.frag  vertsAndNorms.vert  vertsNormsAndColor.frag  vertsNormsAndColor.vert
lib/kinect_fusion/src/camera/: camera.cpp  cameraFactory.cpp  linear.cpp  poly3.cpp  rig.cpp
lib/kinect_fusion/src/depth/: backprojection.cpp  backprojection.cu
lib/kinect_fusion/src/fusion/: fusion.cu
lib/kinect_fusion/src/icpcuda/: ICPOdometry.cpp  device_memory.cpp  estimate.cu  initialization.cpp  pyrdown.cu
lib/kinect_fusion/src/image/: backprojection.cpp  backprojection.cu  bilateralFilter.cu  imagePyramid.cpp
lib/kinect_fusion/src/optimization/: deformationGraphRegularization.cpp  deformationGraphRegularization.cu  icp.cpp  icp.cu  icp_translation.cpp  icp_translation.cu  nonrigidIcp.cpp  nonrigidIcp.cu
lib/kinect_fusion/src/prediction/: raycast.cu
lib/kinect_fusion/src/surface/: color.cu  decimation.cpp  decimation.cu  marchingCubes.cu  marchingCubesTables.cpp  marchingCubesTables.cu  normals.cu
lib/kinect_fusion/src/transform/: nonrigid.cpp  nonrigid.cu
lib/kinect_fusion/src/util/: args.cpp  fileHelpers.cpp  pangolinHelpers.cpp
lib/kinect_fusion/src/voxel/: voxelGrid.cu
lib/pose_estimation/: CMakeLists.txt  ransac.cpp  ransac.hpp  ransac.pyx
lib/pose_estimation/include/: Hypothesis.h  detection.h  properties.h  ransac3D.h  sampler2D.h  stop_watch.h  thread_rand.h  types.h  util.h
lib/pose_estimation/src/: Hypothesis.cpp  properties.cpp  ransac3D.cpp  thread_rand.cpp  util.cpp
lib/pose_refinement/: CMakeLists.txt  refinement.cpp  refinement.hpp  refiner.hpp  refiner.pyx
lib/rendering/: CMakeLists.txt  rendering.cpp  rendering.hpp
lib/synthesize/: .gitignore  CMakeLists.txt  Hypothesis.cpp  __init__.py  cmake.txt  detection.h  iou.cu  iou.h  ransac.h  run.sh  synthesize.cpp  synthesize.hpp  synthesizer.hpp  synthesizer.pyx  thread_rand.h  types.h
lib/synthesize/cmake/: FindNLopt.cmake
ros/: _init_paths.py  listener.py  test.py  test_images.py  test_ros_bag.py
ros/src/synthesizer/: CMakeLists.txt  package.xml  setup.py
ros/src/synthesizer/include/synthesizer/: synthesizer.hpp
ros/src/synthesizer/msg/: PoseCNNMsg.msg
ros/src/synthesizer/src/: main.cpp  synthesizer.cpp
tools/: _init_paths.py  check_data.py  check_data_linemod.py  check_data_lov.py  demo.py  render_poses.py  render_poses_color.py  test_icp.py  test_images.py  test_kinect_fusion.py  test_net.py  test_synthesis.py  test_synthesis_linemod.py  test_synthesis_linemod_one.py  test_synthesis_lov_one.py  test_synthesis_sym.py  test_synthesis_yumi.py  train_net.py
(+186 files in other folders)
